--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,2 +1,7 @@
-broadcast.placebounty.message: "{playerName} has placed a new bounty on {playerPlace}! Who will successfully capture them and claim the reward? Good luck!"
-sender.placebounty.message: "You have successfully placed a bounty of {moneyPlace} on {$playerPlace}! Be on the lookout for any player who might try to capture them and claim the bounty. Good luck!"
+broadcast.placebounty.message: "%1% has placed a new bounty on %2%! Who will successfully capture them and claim the reward? Good luck!"
+
+sender.placebounty.message: "You have successfully placed a bounty of %0% on %2%! Be on the lookout for any player who might try to capture them and claim the bounty. Good luck!"
+sender.bounties.message: "Here are the bounties for %1%: %0%"
+
+top.head.message: "Top bounty - %0%"
+top.message: "%0%. %1% - %2% money"
