add economy & kill player event

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,4 +1,5 @@
 broadcast.placebounty.message: "%1% has placed a new bounty on %2%! Who will successfully capture them and claim the reward? Good luck!"
+broadcast.claimed.message: "%1% has just claimed the bounty of %0% by killing %2%!"
 
 sender.placebounty.message: "You have successfully placed a bounty of %0% on %2%! Be on the lookout for any player who might try to capture them and claim the bounty. Good luck!"
 sender.bounties.message: "Here are the bounties for %1%: %0%"
