--- a/plugin.yml
+++ b/plugin.yml
@@ -1,11 +1,11 @@
 name: BountyHunters
-version: 2.0.0
+version: 2.5.0
 api: 5.0.0
 main: dhnnz\BountyHunters\Loader
 src-namespace-prefix: dhnnz\BountyHunters
 author: dhnnz
 website: https://github.com/dhnnz/BountyHunters
-depend: BedrockEconomy
+softdepend: [BedrockEconomy, EconomyAPI]
 
 commands:
   topbounties:
